bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_mypy", version = "0.40.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "pip_types",
    pip_requirements = "@pypi//:requirements.bzl",
    requirements_txt = "//:requirements.txt",
)
use_repo(types, "pip_types")
